--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:theme="@style/Theme.Calendar"
         tools:targetApi="31">
         <activity
+            android:name=".WelcomePage"
+            android:label="Home"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
