--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Calendar"
         tools:targetApi="31">
+        <activity
+            android:name=".WelcomePage"
+            android:exported="true"
+            android:label="Home"><intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+
+
+        <activity
+            android:name=".Create_Event"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Calendar.NoActionBar">
+
+        </activity>
     </application>
 
 </manifest>
