--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
         <activity
             android:name=".Create_Category"
             android:exported="false" />
+        <activity
+            android:name=".UpdateTask"
+            android:exported="false" />
     </application>
 
 </manifest>
